--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,7 +117,10 @@ header {
   }
 }
 header .navbar-brand svg path {
-  fill: #22feb3;
+  fill: #3eab90;
+}
+header .navbar-brand-mobile svg path {
+  fill: #3eab90;
 }
 @media screen and (max-width: 991px) {
   header .navbar {
