--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -43,7 +43,10 @@ header {
   }
   
 .navbar-brand svg path {
-  fill: #22feb3;
+  fill: #3eab90;
+}
+.navbar-brand-mobile svg path{
+  fill: #3eab90;
 }
 
   // Mobile View
