--- a/assets/css/about_us.css
+++ b/assets/css/about_us.css
@@ -13,48 +13,48 @@
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Light.eot");
-  src: url("/assets/font/Poppins-Light.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Light.woff2") format("woff2"), url("/assets/font/Poppins-Light.woff") format("woff"), url("/assets/font/Poppins-Light.ttf") format("truetype");
+  src: url("../..../../assets/font/Poppins-Light.eot");
+  src: url("../../assets/font/Poppins-Light.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Light.woff2") format("woff2"), url("../../assets/font/Poppins-Light.woff") format("woff"), url("../../assets/font/Poppins-Light.ttf") format("truetype");
   font-weight: 300;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Bold.eot");
-  src: url("/assets/font/Poppins-Bold.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Bold.woff2") format("woff2"), url("/assets/font/Poppins-Bold.woff") format("woff"), url("/assets/font/Poppins-Bold.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-Bold.eot");
+  src: url("../../assets/font/Poppins-Bold.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Bold.woff2") format("woff2"), url("../../assets/font/Poppins-Bold.woff") format("woff"), url("../../assets/font/Poppins-Bold.ttf") format("truetype");
   font-weight: bold;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Medium.eot");
-  src: url("/assets/font/Poppins-Medium.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Medium.woff2") format("woff2"), url("/assets/font/Poppins-Medium.woff") format("woff"), url("/assets/font/Poppins-Medium.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-Medium.eot");
+  src: url("../../assets/font/Poppins-Medium.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Medium.woff2") format("woff2"), url("../../assets/font/Poppins-Medium.woff") format("woff"), url("../../assets/font/Poppins-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-SemiBold.eot");
-  src: url("/assets/font/Poppins-SemiBold.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-SemiBold.woff2") format("woff2"), url("/assets/font/Poppins-SemiBold.woff") format("woff"), url("/assets/font/Poppins-SemiBold.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-SemiBold.eot");
+  src: url("../../assets/font/Poppins-SemiBold.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-SemiBold.woff2") format("woff2"), url("../../assets/font/Poppins-SemiBold.woff") format("woff"), url("../../assets/font/Poppins-SemiBold.ttf") format("truetype");
   font-weight: 600;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Regular.eot");
-  src: url("/assets/font/Poppins-Regular.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Regular.woff2") format("woff2"), url("/assets/font/Poppins-Regular.woff") format("woff"), url("/assets/font/Poppins-Regular.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-Regular.eot");
+  src: url("../../assets/font/Poppins-Regular.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Regular.woff2") format("woff2"), url("../../assets/font/Poppins-Regular.woff") format("woff"), url("../../assets/font/Poppins-Regular.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: "Poppins";
-  src: url("/assets/font/Poppins-Thin.eot");
-  src: url("/assets/font/Poppins-Thin.eot?#iefix") format("embedded-opentype"), url("/assets/font/Poppins-Thin.woff2") format("woff2"), url("/assets/font/Poppins-Thin.woff") format("woff"), url("/assets/font/Poppins-Thin.ttf") format("truetype");
+  src: url("../../assets/font/Poppins-Thin.eot");
+  src: url("../../assets/font/Poppins-Thin.eot?#iefix") format("embedded-opentype"), url("../../assets/font/Poppins-Thin.woff2") format("woff2"), url("../../assets/font/Poppins-Thin.woff") format("woff"), url("../../assets/font/Poppins-Thin.ttf") format("truetype");
   font-weight: 100;
   font-style: normal;
   font-display: swap;
@@ -91,7 +91,7 @@
 }
 .about_us_banner_sec .about_us_banner_img {
   position: relative;
-  margin: 0 auto;
+  margin: 50px auto;
 }
 @media screen and (max-width: 991px) {
   .about_us_banner_sec .about_us_banner_img {
@@ -100,19 +100,30 @@
     object-fit: contain;
   }
 }
-.about_us_banner_sec .about_us_banner_img .about_banner_content {
-  position: absolute;
-  top: 25%;
-  width: 50%;
-  text-align: left;
-  padding-left: 30px;
-}
 .about_us_banner_sec .about_us_banner_img img {
   width: 100%;
   height: 100%;
   object-fit: contain;
 }
 
+.about_us_section .about_us_banner_sec .about_banner_content {
+  width: 80%;
+  margin: 0 auto;
+}
+@media screen and (max-width: 991px) {
+  .about_us_section .about_us_banner_sec .about_banner_content {
+    width: 100%;
+  }
+}
+.about_us_section .about_us_heading {
+  padding-top: 100px;
+}
+.about_us_section .about_us_heading h3 {
+  font-size: 40px;
+  color: #ffffff;
+  font-weight: 300;
+  margin-bottom: 0px;
+}
 .about_us_section .about_part {
   height: auto;
   padding: 50px 0px;
@@ -167,4 +178,28 @@
   .about_us_section .about_part .about_us_content .buttons {
     margin: 30px auto;
   }
+}
+
+.about_card_sec .dev_card p {
+  text-align: center !important;
+}
+.about_card_sec .dev_card .dev_card_logo {
+  flex-direction: column !important;
+}
+.about_card_sec .dev_card .dev_card_logo span {
+  width: 75px;
+  height: 75px;
+  background-color: #3eab90;
+  padding: 15px;
+}
+
+.fade-up {
+  opacity: 0;
+  transform: translateY(50px);
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.fade-up.show {
+  opacity: 1;
+  transform: translateY(0);
 }
