--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -182,6 +182,7 @@ header .navbar-expand-lg .navbar-nav > li .submenu, header .navbar-expand-lg .na
   header .navbar-expand-lg .navbar-nav > li .submenu, header .navbar-expand-lg .navbar-nav > li .inner-submenu {
     position: unset;
     width: 100% !important;
+    transform: unset;
   }
 }
 header .navbar-expand-lg .navbar-nav > li .submenu li a, header .navbar-expand-lg .navbar-nav > li .inner-submenu li a {
@@ -196,6 +197,21 @@ header .navbar-expand-lg .navbar-nav > li .submenu li a:hover .fz_text h3, heade
 header .navbar-expand-lg .navbar-nav > li .submenu {
   background: rgba(6, 54, 50, 0.6);
 }
+header .navbar-expand-lg .navbar-nav > li .submenu .upward-arrow {
+  border-color: transparent transparent rgba(62, 171, 144, 0.2);
+  border-style: solid;
+  border-width: 0 8px 8px;
+  height: 0;
+  position: absolute;
+  top: -8px;
+  width: 0;
+  left: 204px;
+}
+@media screen and (max-width: 991px) {
+  header .navbar-expand-lg .navbar-nav > li .submenu .upward-arrow {
+    border-width: unset;
+  }
+}
 header .navbar-expand-lg .navbar-nav > li .submenu a {
   display: flex;
   padding: 15px 20px;
@@ -204,6 +220,28 @@ header .navbar-expand-lg .navbar-nav > li .submenu a {
 @media screen and (max-width: 991px) {
   header .navbar-expand-lg .navbar-nav > li .submenu a {
     width: 100%;
+  }
+}
+header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover {
+  position: relative;
+}
+header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover:after {
+  border-color: transparent transparent transparent rgba(62, 171, 144, 0.2);
+  border-style: solid;
+  border-width: 8px 0 8px 8px;
+  content: "";
+  height: 0;
+  position: absolute;
+  right: -8px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 0;
+  z-index: 100;
+  transition: all 0.5s ease;
+}
+@media screen and (max-width: 991px) {
+  header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover:after {
+    border-width: unset;
   }
 }
 header .navbar-expand-lg .navbar-nav > li .submenu .image-text {
@@ -255,6 +293,9 @@ header .navbar-expand-lg .navbar-nav > li .inner-submenu a {
 }
 header .navbar-expand-lg .navbar-nav > li .inner-submenu a:hover {
   background: rgba(0, 75, 75, 0.5);
+}
+header .navbar-expand-lg .navbar-nav > li .inner-submenu a:after {
+  border-width: unset !important;
 }
 header .navbar-expand-lg .navbar-nav > li .inner-submenu a h3 {
   font-weight: 500;
