modification in footer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3799,6 +3799,7 @@ div#faq-animate svg {
 .footer_section .fz_footer_container {
   display: flex;
   gap: 50px;
+  justify-content: space-between;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .footer_section .fz_footer_container {
@@ -3881,7 +3882,7 @@ div#faq-animate svg {
 }
 .footer_section .fz_footer_container .footer_list_link {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 150px);
   gap: 30px;
   color: #c7c7c7;
 }
@@ -3960,6 +3961,7 @@ div#faq-animate svg {
   position: relative;
   margin: 20px 0px;
   display: inline-block;
+  width: 100%;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .footer_section .fz_footer_container .subscribe .subscribe-form {
@@ -3974,7 +3976,7 @@ div#faq-animate svg {
   }
 }
 .footer_section .fz_footer_container .subscribe .subscribe-form input {
-  width: 290px;
+  width: 100%;
   padding: 16px;
   font-size: 14px;
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
