--- a/assets/css/terms-and-condition.css
+++ b/assets/css/terms-and-condition.css
@@ -1,6 +1,21 @@
+@keyframes moveAnimation {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(50%);
+  }
+}
+@property --border-angle {
+  syntax: "<angle>";
+  inherits: true;
+  initial-value: 0turn;
+}
 .terms_condition {
+  width: 80%;
   background-color: black;
   padding: 130px 40px;
+  margin: 0 auto;
 }
 .terms_condition .terms_condition_top_part_img img {
   width: 20%;
@@ -13,21 +28,22 @@
   font-size: 45px;
 }
 .terms_condition h3 {
-  color: #00B2B1;
-  font-weight: 400;
-  font-size: 20px;
-}
-.terms_condition h4 {
   color: #3eab90;
-  font-weight: 400;
-  font-size: 18px;
+  font-weight: 500;
+  padding: 10px 0px;
+  margin: 0;
+  font-size: 20px;
 }
 .terms_condition p {
   font-weight: 300;
-  font-size: 16px;
-  color: white;
+  font-size: 14px;
+  line-height: 1.6;
+  margin: 0;
+  padding: 0px 0px 10px 0;
+  color: rgb(160, 160, 160);
 }
 .terms_condition ul li {
   list-style: none;
-  color: white;
+  color: #c7c7c7;
+  line-height: 1.6;
 }
