--- a/assets/css/privacy_policy.css
+++ b/assets/css/privacy_policy.css
@@ -1,20 +1,10 @@
-@keyframes moveAnimation {
-  0% {
-    transform: translateX(0);
-  }
-  50% {
-    transform: translateX(50%);
-  }
-}
-@property --border-angle {
-  syntax: "<angle>";
-  inherits: true;
-  initial-value: 0turn;
-}
 .privacy_policy {
-  width: 80%;
   background-color: black;
   padding: 130px 40px;
+}
+.privacy_policy .privacy_policy_top_part_img img {
+  width: 25%;
+  display: flex;
   margin: 0 auto;
 }
 .privacy_policy h1 {
@@ -23,22 +13,21 @@
   font-size: 45px;
 }
 .privacy_policy h3 {
-  color: #3eab90;
-  font-weight: 500;
-  padding: 10px 0px;
-  margin: 0;
+  color: #00B2B1;
+  font-weight: 400;
   font-size: 20px;
+}
+.privacy_policy h4 {
+  color: #3eab90;
+  font-weight: 400;
+  font-size: 18px;
 }
 .privacy_policy p {
   font-weight: 300;
-  font-size: 14px;
-  line-height: 1.6;
-  margin: 0;
-  padding: 0px 0px 10px 0;
-  color: rgb(160, 160, 160);
+  font-size: 16px;
+  color: white;
 }
 .privacy_policy ul li {
   list-style: none;
-  color: rgb(160, 160, 160);
-  line-height: 1.6;
+  color: white;
 }
