--- a/assets/css/sass/variable.scss
+++ b/assets/css/sass/variable.scss
@@ -232,11 +232,11 @@ img {
   border: 1px solid #2D4949;
   background-color: $black;
   color: #fff;
-  border-radius: 0;
+  border-radius: 3px;
   margin-bottom: 0;
-  padding-top: 17px;
-  padding-bottom: 17px;
-  padding-left: 24px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
   outline: none;
 }
 @mixin field-label {
