product name, alignment issue and home page menu dropdown issue

--- a/assets/css/product.css
+++ b/assets/css/product.css
@@ -40,6 +40,14 @@
     flex-direction: column;
   }
 }
+.fz_product_sec .container .fz_product_left .fz_sub_container .item-1 {
+  padding-top: 178px;
+}
+@media screen and (max-height: 767px) {
+  .fz_product_sec .container .fz_product_left .fz_sub_container .item-1 {
+    padding-top: 150px;
+  }
+}
 .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content {
   position: relative;
   width: 620px;
