--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1992,6 +1992,14 @@ header .fz_sigin ul .unlock a:hover svg path {
     padding: 0 10px;
   }
 }
+.fz_product_sec .container .fz_product_left .item-1 {
+  padding-top: 178px;
+}
+@media screen and (max-height: 767px) {
+  .fz_product_sec .container .fz_product_left .item-1 {
+    padding-top: 150px;
+  }
+}
 .fz_product_sec .container .fz_product_left .fz_sub_container {
   display: flex;
   height: 100vh;
@@ -2000,14 +2008,6 @@ header .fz_sigin ul .unlock a:hover svg path {
   .fz_product_sec .container .fz_product_left .fz_sub_container {
     height: auto;
     flex-direction: column;
-  }
-}
-.fz_product_sec .container .fz_product_left .fz_sub_container .item-1 {
-  padding-top: 178px;
-}
-@media screen and (max-height: 767px) {
-  .fz_product_sec .container .fz_product_left .fz_sub_container .item-1 {
-    padding-top: 150px;
   }
 }
 .fz_product_sec .container .fz_product_left .fz_sub_container .fz_content {
