--- a/assets/css/sass/playstore.scss
+++ b/assets/css/sass/playstore.scss
@@ -59,6 +59,11 @@
             transform: translate3d(0, 0, 0);
             z-index: 1;
           }
+          .play_flex {
+            justify-content: center;
+            align-items: center;
+            display: flex;
+          }
     }
     h2{
         font-size: 48px;
