--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -283,6 +283,11 @@ header .navbar-expand-lg .navbar-nav > li .submenu a {
     width: 100%;
   }
 }
+@media screen and (max-width: 991px) {
+  header .navbar-expand-lg .navbar-nav > li .submenu li > a {
+    pointer-events: none;
+  }
+}
 header .navbar-expand-lg .navbar-nav > li .submenu li > a:hover {
   position: relative;
 }
@@ -1551,7 +1556,6 @@ header .fz_sigin ul .unlock a:hover svg path {
 @media screen and (min-width: 1600px) {
   .panel__stack .panel__card {
     justify-content: center;
-    height: 38rem;
   }
 }
 @media screen and (max-width: 1199px) {
