--- a/assets/css/core.css
+++ b/assets/css/core.css
@@ -320,6 +320,7 @@
   transition: all 1s ease;
   padding: 0px 20px 0 25px;
   margin-left: 20px;
+  z-index: 2;
 }
 #fz_core_nexus .fz_core_text_right div .fz_learmore_btn .text {
   position: relative;
