--- a/assets/css/sass/contact_us.scss
+++ b/assets/css/sass/contact_us.scss
@@ -25,8 +25,8 @@
     padding-top: 120px;
     .get-started {
         width: 100%;
-        display: flex;
-        justify-content: end;
+        // display: flex;
+        // justify-content: end;
         margin-bottom: 72px;
         @media screen and (max-width: 991px) {
             width: 100%;
@@ -34,16 +34,19 @@
             justify-content: flex-start;
         }
         h1 {
-            width: 50%;
             color: #fff;
             margin-top: 20px;
             margin-bottom: 10px;
             font-size: 80px;
+            text-align: center;
             font-weight: 700;
             line-height: 80px;
+            @media (min-width: 992px) and (max-width: 1199px) {
+               font-size: 60px;
+            }
             @media screen and (max-width: 991px) {
-                font-size: 50px;
-                line-height: 56px;
+                font-size: 40px;
+                line-height: 48px;
             }
         }
     }
@@ -53,6 +56,12 @@
         @media screen and (max-width: 991px) {
             flex-direction: column;
         }
+        @media screen and (max-width: 1199px) {
+        .modal-img{
+            width: 70% !important;
+            margin: 0 auto;
+        }
+    }
         .form-wrapper {
             width: 50%;
             color: #fff;
