--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -24,6 +24,7 @@
 .footer_section .fz_footer_container {
   display: flex;
   gap: 50px;
+  justify-content: space-between;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .footer_section .fz_footer_container {
@@ -106,7 +107,7 @@
 }
 .footer_section .fz_footer_container .footer_list_link {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 150px);
   gap: 30px;
   color: #c7c7c7;
 }
@@ -185,6 +186,7 @@
   position: relative;
   margin: 20px 0px;
   display: inline-block;
+  width: 100%;
 }
 @media (min-width: 992px) and (max-width: 1199px) {
   .footer_section .fz_footer_container .subscribe .subscribe-form {
@@ -199,7 +201,7 @@
   }
 }
 .footer_section .fz_footer_container .subscribe .subscribe-form input {
-  width: 290px;
+  width: 100%;
   padding: 16px;
   font-size: 14px;
   background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
@@ -412,11 +414,11 @@
   border: 1px solid #2D4949;
   background-color: #000000;
   color: #fff;
-  border-radius: 0;
+  border-radius: 3px;
   margin-bottom: 0;
-  padding-top: 17px;
-  padding-bottom: 17px;
-  padding-left: 24px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
   outline: none;
   height: 50px;
 }
@@ -447,11 +449,11 @@
   border: 1px solid #2D4949;
   background-color: #000000;
   color: #fff;
-  border-radius: 0;
+  border-radius: 3px;
   margin-bottom: 0;
-  padding-top: 17px;
-  padding-bottom: 17px;
-  padding-left: 24px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
   outline: none;
 }
 #myModal .form-wrapper .fz_submit {
