--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -185,7 +185,7 @@ p{
    }
   input {
     width: 100%;
-    padding: 16px;
+    padding: 16px 34px 16px 16px;
     font-size: 14px;
     background: var(--main-bg) padding-box, var(--gradient-border) border-box, var(--main-bg) border-box;
     border-radius: 96px;
@@ -197,6 +197,7 @@ p{
     animation: bg-spin 6s linear infinite;
    
     position: relative;
+    cursor: auto;
     @keyframes bg-spin {
       to {
         --border-angle: 1turn;
@@ -218,7 +219,7 @@ p{
   }
   .footer_arrow img{
     position: absolute;
-    right:19px;
+    right:13px;
     cursor: pointer;
     bottom:19px;
   }
