--- a/assets/css/sass/header.scss
+++ b/assets/css/sass/header.scss
@@ -181,7 +181,7 @@ header {
           padding: 10px 5px;
           color:$white;
         }
-        .submenu, .inner-submenu {
+        .inner-submenu, .submenu-wrapper {
           display: none;
           position: absolute;
           list-style: none;
@@ -210,7 +210,8 @@ header {
           }
         }
         .submenu {
-          background: rgba(6, 54, 50, 0.6);
+          // background: rgba(6, 54, 50, 0.6);
+          list-style: none;
           .upward-arrow {
             border-color: transparent transparent rgb(62 171 144 / 20%);
             border-style: solid;
@@ -627,3 +628,22 @@ header {
 }
 
 
+#menu-blur-bg {
+  position: fixed;
+  left: 0;
+  right: 0;
+  background: #0a0a0a7c;
+  -webkit-backdrop-filter: blur(20px);
+  -moz-backdrop-filter: blur(20px);
+  -o-backdrop-filter: blur(20px);
+  -ms-backdrop-filter: blur(20px);
+  backdrop-filter: blur(20px);
+  z-index: 200;
+  margin: 0 auto;
+  width: 735px;
+  height: 453px;
+  top: 58px;
+  transform: translateX(80px);
+  border: 1px solid #143941;
+  border-radius: 5px;
+}
