--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -464,6 +464,10 @@ body {
       border-right: 20px solid #2e5858;
       position: relative;
       overflow: hidden;
+      background: url('../images/arrow-animate.gif');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: -20px 43%;
       .row{
           @media (max-width: 991px) {
               display: flex;
@@ -571,6 +575,7 @@ body {
               position: absolute;
               top: 10px;
               left: 160px;
+              display: none;
               @media (max-width: 991px) {
                  display: none;
                 }
