alignment issue fix

--- a/assets/css/sass/footer.scss
+++ b/assets/css/sass/footer.scss
@@ -1,7 +1,7 @@
 @import './variable.scss';
 
 .footer_section {
-  background: linear-gradient(359.8deg, rgb(0 0 0 / 46%) 5.16%, rgb(97 97 97 / 22%) 99.83%);
+  background: linear-gradient(90deg, #000000, #000e0e);
   background-color: $black;
   padding: 150px 0px 0;
 
