--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -53,6 +53,13 @@ li {
 #fz_product_list_hero_sec .product_list_hero .product_list_hero_title span {
   color: #00B2B1;
 }
+@media screen and (max-width: 991px) {
+  #fz_product_list_hero_sec .product_list_hero .product_list_hero_title {
+    padding: 100px 0px 20px 0px;
+    line-height: 54px;
+    font-size: 36px;
+  }
+}
 #fz_product_list_hero_sec .product_list_hero .cmn-btn {
   z-index: 2;
   font-size: 14px;
@@ -493,17 +500,12 @@ li {
 @media (max-width: 1024px) {
   .fz_ai_enhance_sec .fz_ai_enhance_text ul li {
     font-size: 14px;
-    padding: 10px 10px;
-  }
-}
-@media (max-width: 991px) {
-  .fz_ai_enhance_sec .fz_ai_enhance_text ul li {
-    font-size: 14px;
-    padding: 10px 10px;
+    padding: 15px 15px;
   }
 }
 .fz_ai_enhance_sec .fz_ai_enhance_text ul li .fz_cbs_color {
   color: #3eab90;
+  padding: 0px 5px 0px 0px;
 }
 .fz_ai_enhance_sec .fz_ai_enhance_text ul li .normal_text {
   color: #ffffff;
@@ -513,6 +515,12 @@ li {
   height: 30px;
   object-fit: contain;
   margin-right: 16px;
+}
+@media screen and (max-width: 1199px) {
+  .fz_ai_enhance_sec .fz_ai_enhance_text ul li img {
+    width: 20px;
+    height: 20px;
+  }
 }
 .fz_ai_enhance_sec .fz_enhance_col {
   display: flex;
