--- a/assets/css/sass/about_us.scss
+++ b/assets/css/sass/about_us.scss
@@ -125,10 +125,19 @@
         }
         .dev_card_logo{
             flex-direction: column !important;
+            h4{
+                color: $primary-color;
+            }
+            svg{
+                path{
+                    fill: $primary-color;
+                    stroke:$primary-color;
+                }
+            }
             span{
                 width: 75px;
                 height: 75px;
-                background-color: $primary-color;
+                // background-color: $primary-color;
                 padding: 15px;
             }
         }
