alignment issue fix

--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -496,8 +496,10 @@ section {
   border-radius: 20px;
   background-color: #0e1d20;
   margin-bottom: 12px;
-  display: inline-flex;
+  color: #ffffff;
+  display: flex;
   align-items: center;
+  justify-content: flex-start;
 }
 @media (max-width: 1024px) {
   .fz_ai_enhance_sec .fz_ai_enhance_text ul li {
@@ -508,9 +510,6 @@ section {
 .fz_ai_enhance_sec .fz_ai_enhance_text ul li .fz_cbs_color {
   color: #3eab90;
   padding-right: 5px;
-}
-.fz_ai_enhance_sec .fz_ai_enhance_text ul li .normal_text {
-  color: #ffffff;
 }
 .fz_ai_enhance_sec .fz_ai_enhance_text ul li img {
   width: 18px;
@@ -523,6 +522,9 @@ section {
     width: 20px;
     height: 20px;
   }
+}
+.fz_ai_enhance_sec .fz_ai_enhance_text ul li p {
+  margin: 0;
 }
 .fz_ai_enhance_sec .fz_enhance_col {
   display: flex;
