--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -30,6 +30,8 @@ body {
         align-items: center;
         justify-content: space-between;
         flex-direction: column;
+        position: relative;
+        z-index: 9;
         .product_list_hero_title {
             font-size: 64px;
             font-weight: 600;
