--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -102,21 +102,17 @@ input {
   align-items: center;
   font-size: 12px;
   color: #666;
+  gap: 10px;
   margin-bottom: 15px;
   justify-content: flex-start;
 }
 
-.submit-btn {
-  width: 153px;
-  height: 43px;
-  padding: 10px;
-  background: #4950da;
-  color: white;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 12px;
+.login_btn {
+  display: flex;
+  color: black;
+  align-items: center;
+  justify-content: center;
 }
-.submit-btn:hover {
-  background: #3b42b0;
+.login_btn .buttons {
+  color: black;
 }
