--- a/assets/css/products_list.css
+++ b/assets/css/products_list.css
@@ -564,6 +564,11 @@ section {
   background-repeat: no-repeat;
   background-position: -20px 43%;
 }
+@media (max-width: 1199px) {
+  .fz_get_in_touch .get_in_touch {
+    background-position: 38px 40% !important;
+  }
+}
 @media (max-width: 991px) {
   .fz_get_in_touch .get_in_touch .row {
     display: flex;
@@ -593,6 +598,12 @@ section {
   width: 100%;
   height: 100%;
 }
+@media (max-width: 1199px) {
+  .fz_get_in_touch .get_in_touch .get_touch_in_robo_img img {
+    margin-top: 35px;
+    width: 80%;
+  }
+}
 @media (max-width: 991px) {
   .fz_get_in_touch .get_in_touch .get_touch_in_robo_img img {
     position: relative;
@@ -612,10 +623,10 @@ section {
   height: 50px;
   transform: scaleX(2);
 }
-@media (max-width: 1024px) {
+@media (max-width: 1199px) {
   .fz_get_in_touch .get_in_touch .ripple_effect_robo {
-    top: 69%;
-    left: 31%;
+    top: 71%;
+    left: 24%;
   }
 }
 @media (max-width: 991px) {
@@ -660,6 +671,22 @@ section {
   color: #ffffff;
   padding: 20px 0px;
   font-size: 16px;
+}
+@media screen and (max-width: 1399px) {
+  .fz_get_in_touch .get_in_touch .get_touch_in_content p br {
+    display: none;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399px) {
+  .fz_get_in_touch .get_in_touch .get_touch_in_content p {
+    width: 80%;
+  }
+}
+@media (max-width: 1199px) {
+  .fz_get_in_touch .get_in_touch .get_touch_in_content p {
+    padding: 10px 0px;
+    width: 100%;
+  }
 }
 @media (max-width: 991px) {
   .fz_get_in_touch .get_in_touch .get_touch_in_content p {
@@ -971,9 +998,9 @@ section {
   position: relative;
   width: 620px;
 }
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 991px) {
   #fin_bankz_sec .fin_bankz .fin_bankz_content {
-    width: 100%;
+    margin-top: 50px;
   }
 }
 #fin_bankz_sec .fin_bankz .fin_bankz_content .fin_bankz_title {
@@ -1120,6 +1147,12 @@ section {
 @media screen and (max-width: 1199px) {
   #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product {
     width: 100%;
+  }
+}
+@media screen and (max-width: 991px) {
+  #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product {
+    width: 70%;
+    margin: 0 auto;
   }
 }
 #fin_bankz_sec .fin_bankz .fin_bankz_img .finbankz-product::before {
