--- a/assets/css/sass/login.scss
+++ b/assets/css/sass/login.scss
@@ -94,22 +94,19 @@
      align-items: center;
      font-size: 12px;
      color: #666;
+     gap:10px;
      margin-bottom: 15px;
      justify-content: flex-start;
  }
  
- .submit-btn {
-     width: 153px;
-     height: 43px;
-     padding: 10px;
-     background:  #4950da;
-     color: white;
-     border: none;
-     border-radius: 10px;
-     cursor: pointer;
-     font-size: 12px;
- 
-     &:hover {
-         background: #3b42b0;
-     }
+ .login_btn{
+    display: flex;
+    color: black;
+    align-items: center;
+    justify-content: center;
+
+    .buttons{
+        color:black;
+    }
+
  }
