--- a/assets/css/sass/products_list.scss
+++ b/assets/css/sass/products_list.scss
@@ -485,6 +485,10 @@ body {
       background-size: cover;
       background-repeat: no-repeat;
       background-position: -20px 43%;
+
+      @media (max-width: 1199px) {
+        background-position: 38px 40% !important;
+    }
       .row{
           @media (max-width: 991px) {
               display: flex;
@@ -508,6 +512,10 @@ body {
           img{
               width: 100%;
               height: 100%;
+              @media (max-width: 1199px) {
+                margin-top: 35px;
+                width:80%;
+              }
               @media (max-width: 991px) {
                   position: relative;
                   z-index: 1;
@@ -528,10 +536,14 @@ body {
           width: 50px;
           height: 50px;
           transform: scaleX(2);
-          @media (max-width: 1024px) {
-              top:69%;
-              left: 31%;
-            }
+          @media (max-width: 1199px) {
+            top: 71%;;
+            left: 24%;
+          }
+          // @media (max-width: 1024px) {
+          //     top:69%;
+          //     left: 31%;
+          //   }
           @media (max-width: 991px) {
               top: 51%;
               left: 61%;
@@ -573,6 +585,20 @@ body {
               color: $white;
               padding: 20px 0px;
               font-size: 16px;
+              // width:80%;
+              br{
+                @media screen and (max-width:1399px) {
+                  display: none;
+                }
+              }
+              @media (min-width: 1200px) and (max-width: 1399px) {
+      
+              width:80%;
+       }
+              @media (max-width: 1199px) {
+                padding: 10px 0px;
+                width:100%;
+               }
               @media (max-width: 991px) {
                   text-align: center;
                  }
@@ -742,10 +768,10 @@ body {
           .fin_bankz_content {
             position: relative;
             width: 620px;
-  
-            @media only screen and (max-width: 1200px) {
-              width: 100%;
-            }
+       @media only screen and (max-width: 991px) {
+              margin-top: 50px;
+           }
+          
             // @media only screen and (max-width: 991px) {
             //   width: 100%;
             // }
@@ -821,9 +847,12 @@ body {
             .finbankz-product {
                 width: 625px;
                 height: 625px;
-                
                 @media screen and (max-width: 1199px) {
                   width:100%;
+                }
+                @media screen and (max-width: 991px) {
+                  width:70%;
+                  margin: 0 auto;
                 }
                 &::before {
                 content: "";
