two new product page added

--- a/assets/css/sass/about_us.scss
+++ b/assets/css/sass/about_us.scss
@@ -111,6 +111,7 @@
                 text-align: center;
             }
             .buttons{
+                width: 172px;
                 @media screen and (max-width: 991px) {
                 margin: 30px auto;
                 }
