--- a/assets/css/about_us.css
+++ b/assets/css/about_us.css
@@ -174,6 +174,9 @@
     text-align: center;
   }
 }
+.about_us_section .about_part .about_us_content .buttons {
+  width: 172px;
+}
 @media screen and (max-width: 991px) {
   .about_us_section .about_part .about_us_content .buttons {
     margin: 30px auto;
